--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Data files (too large for git)
 data/*.xlsx*
-data/*.csv
 
 # Python
 __pycache__/
@@ -12,6 +11,8 @@ env/
 venv/
 ENV/
 .venv
+
+*/archive/*
 
 # IDE
 .vscode/
